Fix for ion-invalid red unerlining css not showing on ios devices

--- a/src/components/SongForm.css
+++ b/src/components/SongForm.css
@@ -21,3 +21,7 @@
 .submit-form .required {
     margin-left: 5px;
 }
+
+.submit-form ion-item.ion-invalid.ion-touched{
+    border-bottom: 2px solid var(--ion-color-danger) !important;
+}
